# picus

./: .gitmodules  AGENTS.md  Cargo.toml  DESIGN.md  README.md  STYLING.md
.codewhale/state/: subagents.v1.json
.deepseek/state/: subagents.v1.json
assets/locales/en-US/: main.ftl
assets/locales/ja-JP/: main.ftl
crates/bevy_xilem/: Cargo.toml
crates/bevy_xilem-activation/: Cargo.toml
crates/bevy_xilem-activation/src/: lib.rs
crates/bevy_xilem-surface/: Cargo.toml
crates/bevy_xilem-surface/src/: lib.rs
crates/bevy_xilem/src/: app_ext.rs  icons.rs  lib.rs  overlay.rs  plugin.rs  projection.rs  runtime.rs  styling.rs  templates.rs  tests.rs  widget_actions.rs
crates/bevy_xilem/src/components/: mod.rs
crates/bevy_xilem/src/controls/: button.rs  checkbox.rs  color_picker.rs  combo_box.rs  date_picker.rs  dialog.rs  group_box.rs  menu.rs  mod.rs  radio_group.rs  scroll_view.rs  slider.rs  spinner.rs  split_pane.rs  switch.rs  tab_bar.rs  table.rs  text_input.rs  toast.rs  tooltip.rs  tree_node.rs
crates/bevy_xilem/src/projection/: dialog.rs  dropdown.rs  elements.rs  layout.rs  utils.rs  widgets.rs
crates/bevy_xilem/src/theme/: fluent_dark.ron  fluent_theme.ron
crates/bevy_xilem/src/views/: ecs_button_view.rs  ecs_component_views.rs  ecs_drag_thumb_view.rs  entity_scope_view.rs  mod.rs  opaque_hitbox_view.rs  scroll_portal_view.rs
crates/bevy_xilem/src/widgets/: ecs_drag_thumb_widget.rs  entity_scope_widget.rs  mod.rs  opaque_hitbox_widget.rs
crates/picus/: Cargo.toml
crates/picus-activation/: Cargo.toml
crates/picus-activation/src/: lib.rs
crates/picus-activation/src/platform/: linux.rs  macos.rs  mod.rs
crates/picus-surface/: Cargo.toml
crates/picus/src/: app_ext.rs  ecs.rs  events.rs  icons.rs  lib.rs  overlay.rs  runtime.rs  styling.rs  synthesize.rs  tests.rs  widget_actions.rs
crates/picus/tests/: ui.rs
crates/picus_activation/: Cargo.toml
crates/picus_activation/src/: lib.rs
crates/picus_activation/src/platform/: macos.rs  mod.rs  windows.rs
crates/picus_core/: AGENTS.md  Cargo.toml
crates/picus_core/src/: app_ext.rs  backdrop.rs  bevy_tween.rs  composition.rs  drag_drop.rs  ecs.rs  events.rs  fonts.rs  i18n.rs  icon.rs  icons.rs  lib.rs  overlay.rs  perf.rs  plugin.rs  projection.rs  resize.rs  runner.rs  runtime.rs  styling.rs  synthesize.rs  templates.rs  tests.rs  (+3 more)
crates/picus_imaging/: Cargo.toml  README.md
crates/picus_imaging/src/: headless_wgpu.rs  lib.rs  texture_render.rs
crates/picus_masonry/: Cargo.toml
crates/picus_masonry/src/: lib.rs  theme.rs
crates/picus_masonry/src/widgets/: canvas.rs  indexed_stack.rs  pagination.rs  resize_observer.rs  svg.rs  switch.rs  text_input.rs  variable_label.rs  zstack.rs
crates/picus_surface/: AGENTS.md  Cargo.toml
crates/picus_theme_test/: Cargo.toml
crates/picus_view/: Cargo.toml
crates/picus_widget/: Cargo.toml
crates/picus_widget/src/: lib.rs  masonry_core.rs  paint_isolation.rs  text_rendering.rs  theme.rs
crates/picus_widget/src/properties/: border_brush.rs  checkmark.rs  content_color.rs  mod.rs  placeholder_color.rs  progress_bar.rs  selection.rs  slider.rs  step_input.rs
crates/picus_widget/src/properties/types/: mod.rs
crates/picus_widget/src/widgets/: align.rs  badge.rs  badged.rs  button.rs  checkbox.rs  color_spectrum.rs  divider.rs  flex.rs  grid.rs  image.rs  label.rs  mod.rs  passthrough.rs  portal.rs  progress_bar.rs  prose.rs  radio_button.rs  scroll_bar.rs  sized_box.rs  slider.rs  spinner.rs  split.rs  step_input.rs  switch.rs  text_area.rs  text_input.rs  virtual_scroll.rs  zstack.rs
crates/xilem_masonry/: Cargo.toml
docs/: README.md
docs/architecture/: crates.md  overview.md  runtime.md
docs/examples/: index.md
docs/guide/: app.md  events-messages.md  i18n-fonts-icons.md  multi-window.md  overlays-scroll.md  paint-isolation.md  styling-themes.md
docs/perf/: frame-pipeline-baseline.md
docs/plans/: app-dx.md  frame-pipeline.md  gallery-winui-content-parity.md  gallery-winui-coverage.md  gallery-winui-parity.md
examples/: calculator.rs  chess.rs  cjk_text_example.rs  download_with_progress.rs  game_2048.rs  i18n_showcase.rs  overlay_hit_routing.rs  temperature_converter.rs  theme_gallery.rs  timer.rs  todo_list.rs  widget_showcase.rs
examples/async_downloader/: Cargo.toml
examples/async_downloader/assets/themes/: async_downloader.ron
examples/async_downloader/src/: main.rs
examples/calculator/: Cargo.toml  main.rs
examples/chess/: main.rs
examples/chess_engine/: main.rs
examples/chess_game/: Cargo.toml
examples/chess_game/assets/themes/: chess_game.ron
examples/chess_game/src/: engine.rs  main.rs
examples/cjk_text_example/: main.rs
examples/download_with_progress/: main.rs
examples/game_2048/: Cargo.toml  main.rs  ui.rs
examples/game_2048/assets/themes/: game_2048.ron
examples/game_2048/src/: main.rs
examples/i18n_showcase/: main.rs
examples/overlay_hit_routing/: Cargo.toml  main.rs
examples/picuscode/: AGENTS.md  Cargo.toml
examples/picuscode/assets/themes/: picuscode.ron
examples/picuscode/src/: action.rs  bridge.rs  main.rs  settings.rs  state.rs  ui.rs
examples/pixcus/: Cargo.toml  Info.plist  README.md
examples/pixiv_client/: Cargo.toml  Info.plist  README.md
examples/pixiv_client/assets/locales/en-US/: main.ftl
examples/pixiv_client/assets/locales/ja-JP/: main.ftl
examples/pixiv_client/assets/locales/zh-CN/: main.ftl
examples/pixiv_client/assets/themes/: pixiv_client.ron
examples/pixiv_client/src/: app.rs  lib.rs  main.rs
examples/pixiv_client/src/app/: actions.rs  activation.rs  bootstrap.rs  network.rs  persistence.rs  state.rs  ui.rs
examples/shared_utils/: Cargo.toml
examples/temperature_converter/: main.rs  systems.rs
examples/theme_gallery/: main.rs
examples/timer/: Cargo.toml  main.rs
examples/todo_list/: Cargo.toml  main.rs
examples/ui_showcase/: Cargo.toml
examples/ui_showcase/assets/themes/: ui_showcase.ron
examples/ui_showcase/src/: main.rs
examples/widget_showcase/: main.rs
memories/repo/: rust-notes.md
scripts/: analyze_components.py
(+209 files in other folders)
