[package]
name = "picus-activation"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "picus_activation"
path = "src/lib.rs"

[dependencies]
app-single-instance.workspace = true
ipc-channel.workspace = true
serde.workspace = true
plist = "1.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"