[package]
name = "picus_activation"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "picus_activation"
path = "src/lib.rs"

[dependencies]
app-single-instance.workspace = true
ipc-channel.workspace = true
serde.workspace = true
plist.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
block2.workspace = true
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true
