[package]
name = "picus_imaging"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Masonry imaging backend adapters vendored for Picus (from linebender masonry_imaging)."
readme = "README.md"

[features]
default = ["imaging_vello"]
imaging_vello = ["dep:imaging_vello"]
imaging_vello_hybrid = ["dep:imaging_vello_hybrid"]
imaging_vello_cpu = ["dep:imaging_vello_cpu"]
imaging_skia = ["dep:imaging_skia"]

[dependencies]
imaging.workspace = true
imaging_wgpu.workspace = true
imaging_vello = { workspace = true, optional = true }
imaging_vello_cpu = { workspace = true, optional = true }
imaging_vello_hybrid = { workspace = true, optional = true }
imaging_skia = { workspace = true, optional = true }
kurbo.workspace = true
peniko.workspace = true
wgpu.workspace = true

[lints]
workspace = true
