[package]
name = "picus_masonry"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
test = false
doctest = false

[dependencies]
accesskit = "0.24.0"
include_doc_path = { git = "https://github.com/linebender/xilem.git", rev = "72c6517ad035f352c70f939f4754a3f79fca23fd", package = "linebender_include_doc_path" }
masonry_core = { git = "https://github.com/linebender/xilem.git", rev = "72c6517ad035f352c70f939f4754a3f79fca23fd" }
smallvec = "1.15.1"
tracing = "0.1"
