[package]
name = "picus_widget"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
test = false
doctest = false

[dependencies]
accesskit.workspace = true
anymore.workspace = true
smallvec.workspace = true
tracing.workspace = true
xilem.workspace = true

[dev-dependencies]
picus_theme_test.workspace = true
