[package]
name = "example_async_downloader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
picus = { path = "../../crates/picus" }
bevy_ecs.workspace = true
reqwest.workspace = true
tokio.workspace = true
shared_utils = { path = "../shared_utils" }
tracing-subscriber.workspace = true
