[package]
name = "example_async_downloader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
picus_core.workspace = true
bevy_ecs.workspace = true
reqwest.workspace = true
tokio.workspace = true
shared_utils.workspace = true
tracing-subscriber.workspace = true
