[package]
name = "example_chess_game"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
picus_core = { path = "../../crates/picus_core" }
bevy_ecs.workspace = true
num-traits.workspace = true
shared_utils = { path = "../shared_utils" }
tracing-subscriber.workspace = true
