[package]
name = "example_game_2048"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
picus_core = { path = "../../crates/picus_core" }
bevy_ecs.workspace = true
masonry.workspace = true
shared_utils = { path = "../shared_utils" }
tracing-subscriber.workspace = true
