[package]
name = "example_picuscode"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
picus.workspace = true
bevy_ecs.workspace = true
bevy_window.workspace = true
shared_utils.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
futures.workspace = true
async-stream.workspace = true
chrono.workspace = true
uuid.workspace = true
tempfile.workspace = true

codewhale-protocol.workspace = true
codewhale-config.workspace = true
codewhale-state.workspace = true
codewhale-agent.workspace = true
codewhale-core.workspace = true
codewhale-hooks.workspace = true
codewhale-mcp.workspace = true
codewhale-tools.workspace = true
codewhale-execpolicy.workspace = true