[package]
name = "example_pixiv_client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pixiv_client"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
arboard = "3"
base64 = "0.22"
bevy_asset = { version = "0.18", default-features = false }
bevy_embedded_assets.workspace = true
bevy_ecs.workspace = true
bevy_image = { version = "0.18", default-features = false }
bevy_text = { version = "0.18", default-features = false }
picus-activation = { path = "../../crates/picus-activation" }
picus = { path = "../../crates/picus" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = true }
md5 = "0.8"
lucide-icons.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "form", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
unic-langid.workspace = true
vello = "0.7"
webbrowser = "1"
shared_utils = { path = "../shared_utils" }
