[package]
name = "example_ui_showcase"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
picus_core = { path = "../../crates/picus_core" }
bevy_ecs.workspace = true
bevy_embedded_assets.workspace = true
shared_utils = { path = "../shared_utils" }
tracing.workspace = true
tracing-subscriber.workspace = true
unic-langid.workspace = true
